# video-and-document-summarizer

./: app.py  main.py  pyproject.toml  pyrightconfig.json
src/: app.py
src/services/: ai_engine.py  document.py  youtube.py
src/utils/: helpers.py
